# maize_weeding_system

./: .gitignore  README.md  WORKSPACE_NOTES.md
src/FAST-LIVO2-ros2/: CMakeLists.txt
src/FAST-LIVO2-ros2/config/: camera_pinhole.yaml  mid360.yaml
src/FAST-LIVO2-ros2/include/: LIVMapper.h
src/FAST-LIVO2-ros2/launch/: mapping_mid360.launch.py
src/FAST-LIVO2-ros2/src/: LIVMapper.cpp
src/FAST-LIVO2/config/: avia.yaml  camera_pinhole.yaml  mid360.yaml
src/FAST-LIVO2/include/: LIVMapper.h  vio.h
src/FAST-LIVO2/launch/: mapping_mid360.launch.py
src/FAST-LIVO2/src/: LIVMapper.cpp  vio.cpp  voxel_map.cpp
src/FDILink_ROS2/include/: ahrs_driver.h
src/FDILink_ROS2/launch/: ahrs_driver.launch.py
src/FDILink_ROS2/src/: ahrs_driver.cpp
src/calib_axxb/: CMakeLists.txt  README_ROS2.md  build.sh  clear.sh  package.xml  readme
src/calib_axxb/config/: calib.yaml
src/calib_axxb/include/: hand_eye_calibrator.h
src/calib_axxb/src/: hand_eye_calibrator.cpp
src/fdilink_gnss_bridge/: CMakeLists.txt  README.md  package.xml
src/fdilink_gnss_bridge/launch/: gnss_bridge.launch.py
src/fdilink_gnss_bridge/src/: gnss_bridge_node.cpp  gnss_gate_node.cpp
src/ground_mapper/: README.md  package.xml  setup.cfg  setup.py
src/ground_mapper/config/: ground_mapper.yaml  ground_mapper_bench.yaml
src/ground_mapper/ground_mapper/: ground_mapper_node.py
src/ground_mapper/launch/: ground_mapper.launch.py
src/livox_ros_driver2/: CMakeLists.txt
src/livox_ros_driver2/config/: MID360_ros2.yaml  livox_recording.yaml  rosbag_livox_qos.yaml
src/livox_ros_driver2/launch_ROS2/: msg_MID360_launch.py
src/livox_ros_driver2/scripts/: check_livox_health.py  record_livox_safe.sh
src/livox_ros_driver2/src/: driver_node.cpp  driver_node.h  lddc.cpp  lddc.h  lds.cpp  lds.h  livox_ros_driver2.cpp
src/livox_ros_driver2/src/comm/: lidar_imu_data_queue.cpp  lidar_imu_data_queue.h  semaphore.h
src/maize_weeding_bringup/: package.xml  setup.cfg  setup.py
src/maize_weeding_bringup/launch/: bench_seedling_demo.launch.py  bench_terrain_mapping.launch.py  maize_weeding_bringup.launch.py
src/maize_weeding_bringup/maize_weeding_bringup/: livox_custom_to_pointcloud.py
src/maize_weeding_bringup/rviz/: maize_weeding.rviz
src/miivii_gmsl_camera/miivii_gmsl_ros/: CMakeLists.txt
src/miivii_gmsl_camera/miivii_gmsl_ros/config/: camera2_params.yaml  camera3_params.yaml
src/miivii_gmsl_camera/miivii_gmsl_ros/include/miivii_gmsl_camera/: miivii_gmsl_camera.hpp
src/miivii_gmsl_camera/miivii_gmsl_ros/launch/: single.launch.py  small_delivery_car_profile1.launch  small_delivery_car_profile1_withoutrviz.launch
src/miivii_gmsl_camera/miivii_gmsl_ros/src/: miivii_gmsl_camera.cpp  miivii_gmsl_camera.cpp.bak_timestamp_filter  miivii_gmsl_camera_node.cpp
src/oid_wheel_encoder/: README.md  package.xml  setup.cfg  setup.py
src/oid_wheel_encoder/config/: oid_wheel_encoder.yaml  oid_wheel_encoder_bench.yaml
src/oid_wheel_encoder/launch/: oid_wheel_encoder.launch.py  oid_wheel_encoder_bench.launch.py
src/oid_wheel_encoder/oid_wheel_encoder/: bench_virtual_odom.py  protocol.py  wheel_encoder_node.py
src/oid_wheel_encoder/test/: test_bench_virtual_odom.py  test_protocol.py
src/rpg_vikit/vikit_common/: CMakeLists.txt
src/rpg_vikit/vikit_ros/include/vikit/: params_helper.h
src/seedling_path_planning/: README.md  package.xml  setup.cfg  setup.py
src/seedling_path_planning/config/: spatial_path_planner.yaml  spatial_path_planner_bench.yaml
src/seedling_path_planning/launch/: spatial_path_planner.launch.py
src/seedling_path_planning/seedling_path_planning/: __init__.py  planner_core.py  spatial_path_planner_node.py
src/seedling_path_planning/test/: test_planner_core.py  test_synthetic_terrain_following.py
src/seedling_semantic_mapping/: README.md  package.xml  setup.cfg  setup.py
src/seedling_semantic_mapping/config/: seedling_pipeline.yaml  seedling_pipeline_bench.yaml
src/seedling_semantic_mapping/docs/: FASTLIVO_SYNC_PATCH.md
src/seedling_semantic_mapping/launch/: orange_ball_pipeline.launch.py  seedling_pipeline.launch.py
src/seedling_semantic_mapping/seedling_semantic_mapping/: color_sep_localizer.py  odom_tf_broadcaster.py  rolling_submap_builder.py  seedling_mapper.py  terrain_ray.py  yolo_sep_localizer.py
src/seedling_semantic_mapping/test/: test_detector_mode.py  test_terrain_ray.py
src/weed_bringup/: CMakeLists.txt  README.md  package.xml
src/weed_bringup/launch/: calib_record.launch.py  weed_system.launch.py
src/weed_bringup/scripts/: start_calib_record.sh  start_weed_system.sh
src/weed_calibration_tools/: README.md  package.xml  setup.cfg  setup.py
src/weed_calibration_tools/weed_calibration_tools/: align_trajectories.py  calib_axxb.py  export_odom_tum.py  odom_to_path.py
src/weedarm_h5u_bridge_ros2/weedarm_h5u_bridge/: README.md  package.xml  setup.cfg  setup.py
src/weedarm_h5u_bridge_ros2/weedarm_h5u_bridge/config/: h5u_bridge.yaml
src/weedarm_h5u_bridge_ros2/weedarm_h5u_bridge/launch/: h5u_bridge.launch.py  test_sync_traj.launch.py
src/weedarm_h5u_bridge_ros2/weedarm_h5u_bridge/weedarm_h5u_bridge/: h5u_csp_bridge.py  h5u_modbus.py  registers.py  sync_traj_publisher.py
src/weedarm_row_planner_test/: README.md  package.xml  setup.cfg  setup.py
src/weedarm_row_planner_test/launch/: row_seedling_planner_test.launch.py
src/weedarm_row_planner_test/weedarm_row_planner_test/: row_seedling_planner_test.py
tools/: auto_label_fake_seedlings.py  capture_training_images.py  jawd_canopen_conveyor.py
