<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>calib_axxb</name>
  <version>0.1.0</version>
  <description>AX=XB hand-eye calibration tool packaged for ROS 2.</description>
  <maintainer email="todo@example.com">todo</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>
  <depend>yaml-cpp</depend>
  <depend>ceres-solver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
