<?xml version="1.0"?>
<package format="3">
  <name>oid_wheel_encoder</name>
  <version>0.1.0</version>
  <description>SocketCAN driver for an OID single-turn absolute encoder used as a measuring wheel.</description>
  <maintainer email="1619675251@qq.com">HU CU</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
