<?xml version="1.0"?>
<package format="3">
  <name>seedling_semantic_mapping</name>
  <version>0.1.0</version>
  <description>YOLO SEP detection to 3D localization and seedling landmark mapping using FAST-LIVO2 synchronized image/cloud/odom topics.</description>
  <maintainer email="nvidia@todo.todo">nvidia</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
