<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>weed_bringup</name>
  <version>0.1.0</version>
  <description>Bringup launch files for the weeding robot localization stack.</description>
  <maintainer email="todo@example.com">todo</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>fdilink_ahrs</exec_depend>
  <exec_depend>fdilink_gnss_bridge</exec_depend>
  <exec_depend>fast_livo</exec_depend>
  <exec_depend>miivii_gmsl_camera</exec_depend>
  <exec_depend>weed_calibration_tools</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
