<?xml version="1.0"?>
<package format="3">
  <name>weedarm_h5u_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 bridge for H5U weed arm CSP Y/Z trajectory buffering over Modbus TCP.</description>
  <maintainer email="1619675251@qq.com">HU CU</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
